--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
    ],
    "source": [
     "# Create a plot that shows the SalesPrice Distribution\n",
-    "df.plot.scatter()"
+    "df.plot.scatter('SalesPrice Distribution')"
    ]
   },
   {
