Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "# Loading the data\n",
-    "df = pd.read_csv('ames_train.csv')"
+    "df = pd.read_csv('ames_train.csv')\n"
    ]
   },
   {
